--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
+blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
 Flask==3.0.3
+Flask-Minify==0.48
+htmlminf==0.1.13
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jsmin==3.0.1
+lesscpy==0.15.1
+MarkupSafe==2.1.5
+ply==3.11
+rcssmin==1.1.2
+six==1.16.0
+Werkzeug==3.0.3
+xxhash==3.4.1
